# web_hw10Django

./: .env  .env.example  pyproject.toml
famous_quotes/: manage.py
famous_quotes/app_auth/: forms.py  urls.py  views.py
famous_quotes/app_auth/templates/app_auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  registration.html
famous_quotes/famous_quotes/: asgi.py  settings.py  urls.py  wsgi.py
famous_quotes/quotes/: forms.py  models.py  urls.py  views.py
famous_quotes/quotes/migrations/: 0001_initial.py  0002_tag_remove_quote_tags_quotetag.py  0003_rename_quote_id_quotetag_quote_and_more.py  0004_quote_tags_delete_quotetag.py  0005_author_slug.py  0006_auto_20241108_1301.py
famous_quotes/quotes/static/quotes/: main.css
famous_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
famous_quotes/quotes/transfer_data/: mongo_to_postgres.py
