[tool.poetry]
name = "web-hw10-django"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
